# bandordle

./: .gitignore  Cargo.toml
bindings/: AppError.ts  Grade.ts  GradingError.ts  GuessArgs.ts  GuessResult.ts  NewGameResult.ts
crates/lastfm/: Cargo.toml
crates/lastfm/src/: api_types.rs  lib.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.svelte
frontend/src/lib/: Game.svelte  api.ts  user.svelte.ts
frontend/src/pages/artist/: page.svelte
frontend/src/pages/home/: page.svelte
frontend/src/pages/login/: page.svelte
migrations/: 20251224100624_user.sql
src/: lastfm.rs  main.rs
src/lastfm/: api_types.rs
