[package]
name = "bandordle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
lastfm = { version = "0.1.0", path = "crates/lastfm" }
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "macros",
] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = "0.3.22"
ts-rs = { version = "11.1.0", features = ["uuid-impl"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[workspace]
members = ["crates/lastfm"]
